--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-203.3KB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 波兰-405.2KB/s(Youtube:不良林), server: 217.30.10.65, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇷🇺 俄罗斯联邦-636.6KB/s(Youtube:不良林), server: 213.183.53.214, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇺🇸 美国-211.7KB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇳🇱 荷兰-251.4KB/s(Youtube:不良林), server: 213.183.59.206, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林), server: 213.183.53.214, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇨🇳 中国-3.23MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林), server: 213.183.53.200, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇺🇸 美国-939.6KB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇳🇱 荷兰-384.9KB/s(Youtube:不良林), server: 213.183.59.190, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
   - {name: 🇨🇳 中国-2.37MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-211.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-203.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 波兰-405.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-636.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-203.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 波兰-405.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-636.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-203.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 波兰-405.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-636.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-203.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 波兰-405.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-636.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-203.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 波兰-405.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-636.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-203.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 波兰-405.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-636.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-203.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 波兰-405.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-636.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
