--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-251.4KB/s(Youtube:不良林), server: 213.183.59.206, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
-  - {name: 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林), server: 213.183.53.214, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇨🇳 中国-3.23MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林), server: 213.183.53.200, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇺🇸 美国-939.6KB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇳🇱 荷兰-384.9KB/s(Youtube:不良林), server: 213.183.59.190, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇨🇳 中国-2.37MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-211.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.73MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-642.0KB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇷🇺 俄罗斯联邦-621.7KB/s(Youtube:不良林), server: 213.183.53.200, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇺🇸 美国-939.6KB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-263.0KB/s(Youtube:不良林), server: 38.121.43.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇷🇺 俄罗斯联邦-271.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇳🇱 荷兰-320.1KB/s(Youtube:不良林), server: 213.183.59.190, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
+  - {name: 🇳🇱 荷兰-624.7KB/s(Youtube:不良林), server: 213.183.59.185, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇳🇱 荷兰-412.3KB/s(Youtube:不良林), server: 213.183.59.211, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林), server: 213.183.53.200, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇷🇺 俄罗斯联邦-702.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-621.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-263.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-271.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-624.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-412.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-702.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-621.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-263.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-271.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-624.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-412.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-702.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-621.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-263.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-271.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-624.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-412.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-702.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-621.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-263.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-271.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-624.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-412.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-702.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-621.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-263.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-271.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-624.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-412.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-702.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-621.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-263.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-271.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-624.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-412.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-702.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-384.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
       - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-642.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-621.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-263.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-271.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-624.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-412.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-702.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
