--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-868.1KB/s(Youtube:不良林), server: 213.183.59.190, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇭🇰 香港-2.57MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-206.8KB/s(Youtube:不良林), server: 38.121.43.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-232.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-395.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.50MB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12222, type: vmess, uuid: eddbceb6-a19e-324a-86ed-ecf4fe041656, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-770.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-305.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇨🇳 中国-320.0KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇭🇰 香港-2.57MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 捷克-371.3KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 捷克-305.8KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇨🇳 中国-570.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-417.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇦 加拿大-1.13MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-868.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-395.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-770.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-305.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
       - 捷克-371.3KB/s(Youtube:不良林)
+      - 捷克-305.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-417.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-868.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-395.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-770.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-305.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
       - 捷克-371.3KB/s(Youtube:不良林)
+      - 捷克-305.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-417.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-868.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-395.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-770.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-305.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
       - 捷克-371.3KB/s(Youtube:不良林)
+      - 捷克-305.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-417.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-868.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-395.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-770.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-305.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
       - 捷克-371.3KB/s(Youtube:不良林)
+      - 捷克-305.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-417.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-868.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-395.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-770.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-305.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
       - 捷克-371.3KB/s(Youtube:不良林)
+      - 捷克-305.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-417.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-868.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-395.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-770.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-305.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
       - 捷克-371.3KB/s(Youtube:不良林)
+      - 捷克-305.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-417.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-868.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-395.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-770.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-305.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.57MB/s(Youtube:不良林)
       - 捷克-371.3KB/s(Youtube:不良林)
+      - 捷克-305.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-417.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
